force-app/main/default/objects/V2MOM_Component__c/V2MOM_Component__c.object-meta.xml
<CustomObject>
    <label>V2MOM Component</label>
    <nameField>
        <label>V2MOM Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>V2MOM Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>