force-app/main/default/objects/V2MOM_Component__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Method</label>
    <referenceTo>Method__c</referenceTo>
    <relationshipLabel>V2MOM Components</relationshipLabel>
    <relationshipName>V2MOM_Components</relationshipName>
    <type>Lookup</type>
</CustomField>