force-app/main/default/objects/V2MOM_Component__c/fields/Obstacle__c.field-meta.xml
<CustomField>
    <fullName>Obstacle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obstacle</label>
    <referenceTo>Obstacle__c</referenceTo>
    <relationshipLabel>V2MOM Components</relationshipLabel>
    <relationshipName>V2MOM_Components</relationshipName>
    <type>Lookup</type>
</CustomField>