force-app/main/default/objects/V2MOM_Component__c/fields/V2MOM__c.field-meta.xml
<CustomField>
    <fullName>V2MOM__c</fullName>
    <label>V2MOM</label>
    <referenceTo>V2MOM__c</referenceTo>
    <relationshipLabel>V2MOM Components</relationshipLabel>
    <relationshipName>V2MOM_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>